--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,13 @@
     "ember-resolver": "~0.1.18",
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
-    "qunit": "~1.17.1"
+    "qunit": "~1.17.1",
+    "ember-simple-auth": "0.8.0",
+    "firebase": "^2.1.0",
+    "ember-cli-moment-shim": "~0.2.0"
+  },
+  "devDependencies": {
+    "bootstrap-sass": "~3.3.5",
+    "marked": "~0.3.3"
   }
 }
