--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ember-cli-babel": "^5.0.0",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
+    "ember-cli-divshot": "0.1.7",
     "ember-cli-emblem": "0.2.7",
     "ember-cli-htmlbars": "0.7.9",
     "ember-cli-htmlbars-inline-precompile": "^0.1.1",
